html tags in ejs files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,14 @@
 <%- include('head.ejs') %>
 <h1>Homepage</h1>
-<section>
-    <h2>Welcome at Adventurly</h2>
-</section>
+<div class="home container">
+    <section>
+        <h2>Explore the World</h2>
+        <a href="/"></a>
+    </section>
+   
+    <div>
+        <ul>
+            <li><img /></li>
+        </ul>
+    </div>
+</div>
