--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,16 @@
 <%- include('head.ejs') %>
-<h1>Homepage</h1>
-<div class="home container">
-    <section>
-        <h2>Explore the World</h2>
-        <a href="/"></a>
-    </section>
-   
-    <div>
-        <ul>
-            <li><img /></li>
-        </ul>
+<body>
+    <div class="home container">
+        <section>
+            <h2>Explore the World</h2>
+            <a href="/"></a>
+        </section>
+       
+        <div>
+            <ul>
+                <li><img src="/images/lisbon.jpg"/></li>
+                <li><img src="/images/bali.jpg"/></li>
+            </ul>
+        </div>
     </div>
-</div>
+</body>
