added sass vars and layout

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,3 +1,6 @@
+@import 'vars/colors.scss';
+@import 'layout/typography.scss';
+
 body {
-    background-color: #ccc;
+    background-color: #fff;
 }
