--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,5 +2,36 @@
 @import 'layout/typography.scss';
 
 body {
-    background-color: #fff;
+    background-color: $color-white;
+}
+
+.home{
+    // home trips list
+    &__trips{
+        display: flex;
+        overflow: auto;
+        flex-grow: 1;
+        scroll-snap-type: x mandatory;
+        scroll-behavior: smooth;
+        padding: 0;
+        color: $color-white;
+        li{
+            &:first-child{
+                padding-left: 0px;
+            }
+            padding: 0px 20px;
+            list-style-type: none;
+        }
+    }
+    // hide horizontal scrollbar
+    ::-webkit-scrollbar{
+        display:none
+    }
+}
+.avatar{
+    width: 30px;
+    height: 30px;
+}
+.trips{
+
 }
