--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -1,20 +1,36 @@
+<%- include('head.ejs') %>
 <header>
-    <div>
-        <nav>
-            <a>icon</a>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/trips">Trips</a></li>
-            </ul>
-        </nav>
-        <a><img />Profile</a>
-    </div>
+  <div>
+    <nav>
+      <a><img class="avatar" src="/images/<%= user.image %>" />icon</a>
+      <h1>Welcome, <%= user.name %>!</h1>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/trips">Trips</a></li>
+      </ul>
+    </nav>
+    <a><img />Profile</a>
+  </div>
 </header>
 <div class="trips container">
-    <h1>Explore trips</h1>
-    <div>
-        <ul>
-            <li><img /></li>
-        </ul>
-    </div>
+  <h1>Explore trips</h1>
+  <div>
+    <% for (let trip of trips) { %>
+    <li><%= trip.destination %></li>
+    <% if (trip.image) { %>
+    <img src="/images/<%= trip.image %>" />
+    <% } else { %>
+    <span>No image available</span>
+    <% } %> <% } %>
+  </div>
+  <h2>Add a Trip</h2>
+  <form method="POST" action="/trips" enctype="multipart/form-data">
+    <label for="destination">Destination:</label>
+    <input type="text" id="destination" name="destination" required />
+
+    <label for="image">Image:</label>
+    <input type="file" id="image" name="image" required />
+
+    <button type="submit">Add Trip</button>
+  </form>
 </div>
