--- a/scss/layout/typography.scss
+++ b/scss/layout/typography.scss
@@ -1,5 +1,13 @@
-h2 {
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
     font-size: 60px;
+}
+
+h2 {
+    font-size: 40px;
     font-weight: 400;
     line-height: 1.2;
     margin-bottom: 1rem;
