--- a/views/book.ejs
+++ b/views/book.ejs
@@ -1,19 +1,34 @@
+<%- include('head.ejs') %> <%- include('header.ejs') %>
 <div class="trip container">
   <div>
-    <img />
-  </div>
-  <section>
-    <h2>Barcelona</h2>
-    <p>Date</p>
-    <span>price</span>
-    <span>per person</span>
-    <form action="add-booking.js" method="post">
-      <label>Select date:</label>
-      <!-- loop -->
-      <radio-button></radio-button>
-      <label>Bagage:</label>
-      <radio-button></radio-button>
-      <input type="submit" value="Book now" />
+    <% if (trip) { %>
+    <img src="/images/<%= trip.image %>" />
+    <h1><%= trip.destination %></h1>
+    <p><%= trip.price %></p>
+    <form action="" method="POST">
+      <% for (let available of trip.availability) { %>
+      <label for="date_range">
+        <input
+          type="radio"
+          id="date_range"
+          name="date_range"
+          value="<%= available.start_date %>-<%= available.end_date %>"
+        />
+        <span><%= available.start_date %> - <%= available.end_date %></span>
+      </label>
+      <% } %>
+      <br />
+      <% for (let room of trip.rooms) { %>
+      <label for="room">
+        <input type="radio" id="room" name="room" value="<%= room.type %>" />
+        <span><%= room.type %></span>
+        <span><%= room.gender %></span>
+        <span>€<%= room.price %></span>
+      </label>
+      <% } %>
+      <br />
+      <button type="submit">Book now</button>
     </form>
-  </section>
+    <% } %>
+  </div>
 </div>
