--- a/scss/vars/colors.scss
+++ b/scss/vars/colors.scss
@@ -1,6 +1,5 @@
 $color-white: #ffffff;
 $color-black: #000000;
-$color-green: #05F07E;
-$color-blue: #04153D;
-$color-grey: #A1A1A1;
-$color-grey--lighter: #E3E3E3;
+$color-blue: #1B2739;
+$color-blue--lighter: #4CA6FE;
+$color-orange: #E85C05;
