--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,9 @@
 <header>
-  <div>Menu</div>
+  <div>
+    <a href="/">
+      <img src="/images/logo.svg" alt="logo" />
+    </a>
+  </div>
   <% if (user) { %>
   <a><img class="avatar" src="/images/<%= user.image %>" /></a>
   <% } %>
