--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,22 +6,79 @@ body {
     margin: 0;
 }
 
+.container {
+    max-width: 425px;
+    margin: 0 auto;
+}
+
+img {
+    width: 100%;
+}
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: $color-blue;
-    color: $color-white;
 }
+
+
 .home{
-    margin: 25px;
+    &__intro-container{
+        margin: 35px 25px 0px 25px;
+    }
     &__logo{
         width: 200px;
     }
+    &__tagline{
+        font-size: 20px;
+        font-weight: 100;
+        color: $color-blue;
+        margin-bottom: 10px;
+        margin-top: 40px;
+    }
+    &__title{
+        max-width: 300px;
+    }
+    &__btn{
+        margin-top: 35px;
+        margin-left: 120px;
+    }
+    &__trips-container{
+        position: relative;
+        margin-top: 50px;
+    }
 }
+
+.trips{
+    &__heading{
+        margin: 35px 25px 0px 25px;
+    }
+    .trips-list{
+        li{
+            &:first-child{
+                padding-left: 25px;
+            }
+            &:last-child{
+                padding-right: 50px;
+            }
+        }
+    }
+    &__trip-heading{
+        text-align: center;
+        font-weight: 600;
+        margin-top: 30px;
+    }
+}
+// .background-overlay{
+//     position: absolute;
+//     width: 100%;
+//     height: 300px;
+//     top: -110px;
+//     background: linear-gradient(180deg, #000000 0%, rgba(217, 217, 217, 0) 72.47%);
+//     z-index: -1;
+// }
 .trips-list{
-    position: absolute;
     left: 0;
     width: 100%;
     display: flex;
@@ -30,21 +87,76 @@ header {
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     padding: 0;
+    margin: 0;
     color: $color-white;
     li{
+        min-width: 250px;
+        flex: 0 0 auto;
+        padding: 0px 20px;
+        list-style-type: none;
+        align-items: stretch;
         a{
             display: block;
+            width: 100%;
         }
         &:first-child{
             padding-left: 0px;
         }
-        padding: 0px 20px;
-        list-style-type: none;
+        img {
+            border-radius: 15px;
+            border-top-right-radius: 190px;
+            box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+        }
+
     }
     
 }
 .trip{
     margin-bottom: 200px;
+    &__image-container{
+        background-size: cover;
+        background-position: center;
+        height: 300px;
+        margin-bottom: -50px;
+    }
+    &__details-container{
+        padding: 35px 25px 0px 25px;
+        border-top-left-radius: 40px;
+        background: $color-white;
+    }
+    &__title-container{
+        display: flex;
+        justify-content: space-between;
+        p{
+            margin: 0;
+        }
+    }
+    &__title{
+        margin: 0;
+        font-size: 35px;
+    }
+    &__price{
+        font-size: 40px;
+        font-weight: 600;
+        text-align: right;
+    }
+    &__per-person{
+        text-align: right;
+    }
+    &__details-inner-container{
+
+    }
+}
+.book-trip{
+    .image-container{
+        height: 100px;
+    }
+}
+.book-btn{
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    padding: 10px 50px;
 }
 .avatar{
     width: 30px;
