--- a/scss/layout/typography.scss
+++ b/scss/layout/typography.scss
@@ -2,15 +2,53 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6{
+    color: $color-blue;
+}
+
+p {
+    color: $color-black;
+}
+
+a{
+    color: $color-orange;
+    text-decoration: none;
+}
+
 h1 {
-    font-size: 60px;
+    font-size: 40px;
 }
 
 h2 {
     font-size: 40px;
     font-weight: 400;
     line-height: 1.2;
+    text-transform: lowercase;
     margin-bottom: 1rem;
     margin-top: 0;
     color: $color-blue;
+}
+
+h3 {
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 1.2;
+    text-transform: lowercase;
+    margin-bottom: 1rem;
+    margin-top: 0;
+    color: $color-blue;
+}
+.btn{
+    display: block;
+    background-color: $color-orange;
+    border-radius: 45px;
+    padding: 18px 20px;
+    color: $color-white;
+    text-align: center;
+    border: solid 1px $color-orange;
+    transition: 0.25s ease-in-out;
+    &:hover{
+        background-color: $color-white;
+        color: $color-orange;
+    }
 }
