--- a/views/book.ejs
+++ b/views/book.ejs
@@ -1,10 +1,24 @@
-<%- include('head.ejs') %> <%- include('header.ejs') %>
-<div class="trip container">
+<%- include('head.ejs') %>
+<div class="book-trip trip container">
+  <% if (trip) { %>
+  <div
+    class="trip__image-container image-container"
+    style="background-image: url('/images/<%= trip.image %>')"
+  ></div>
+  <div class="trip__details-container">
+    <div class="trip__title-container">
+      <div>
+        <h1 class="trip__title"><%= trip.destination %></h1>
+        <p class="trip__duration"><%= trip.duration %> day tour</p>
+      </div>
+      <div>
+        <p class="trip__price">,- <%= trip.price %></p>
+        <p class="trip__per-person">per person</p>
+      </div>
+    </div>
+    <div class="trip__details-inner-container"></div>
+  </div>
   <div>
-    <% if (trip) { %>
-    <img src="/images/<%= trip.image %>" />
-    <h1><%= trip.destination %></h1>
-    <p><%= trip.price %></p>
     <form action="" method="POST">
       <% for (let available of trip.availability) { %>
       <label for="date_range">
@@ -49,6 +63,6 @@
       <input name="email" type="text" value="<%= user.email %>" readonly />
       <button type="submit">Book now</button>
     </form>
-    <% } %>
   </div>
+  <% } %>
 </div>
