--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,48 +1,58 @@
 @import 'vars/colors.scss';
 @import 'layout/typography.scss';
 
+// General
 body {
     background-color: $color-white;
     margin: 0;
 }
-
-.container {
-    max-width: 425px;
-    margin: 0 auto;
-}
-
-img {
-    width: 100%;
-}
-
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    .avatar{
+        width: 30px;
+        height: 30px;
+    }
+}
+// hide horizontal scrollbar
+::-webkit-scrollbar{
+    display:none
 }
 
+// Containers
+.container {
+    max-width: 425px;
+    margin: 0 auto;
+}
 
+// Images
+img {
+    width: 100%;
+}
+
+// Startpage - Home
 .home{
     &__intro-container{
         margin: 35px 25px 0px 25px;
-    }
-    &__logo{
-        width: 200px;
-    }
-    &__tagline{
-        font-size: 20px;
-        font-weight: 100;
-        color: $color-blue;
-        margin-bottom: 10px;
-        margin-top: 40px;
-    }
-    &__title{
-        max-width: 300px;
-    }
-    &__btn{
-        margin-top: 35px;
-        margin-left: 120px;
+        .logo{
+            width: 200px;
+        }
+        .tagline{
+            font-size: 20px;
+            font-weight: 100;
+            color: $color-blue;
+            margin-bottom: 10px;
+            margin-top: 40px;
+        }
+        .title{
+            max-width: 300px;
+        }
+        .btn{
+            margin-top: 35px;
+            margin-left: 120px;
+        }
     }
     &__trips-container{
         position: relative;
@@ -50,6 +60,7 @@ header {
     }
 }
 
+// Trips
 .trips{
     &__heading{
         margin: 35px 25px 0px 25px;
@@ -70,15 +81,9 @@ header {
         margin-top: 30px;
     }
 }
-// .background-overlay{
-//     position: absolute;
-//     width: 100%;
-//     height: 300px;
-//     top: -110px;
-//     background: linear-gradient(180deg, #000000 0%, rgba(217, 217, 217, 0) 72.47%);
-//     z-index: -1;
-// }
-.trips-list{
+
+// All trips - List
+ul.trips-list{
     left: 0;
     width: 100%;
     display: flex;
@@ -111,6 +116,8 @@ header {
     }
     
 }
+
+// Single trip
 .trip{
     margin-bottom: 200px;
     &__image-container{
@@ -157,12 +164,4 @@ header {
     bottom: 25px;
     right: 25px;
     padding: 10px 50px;
-}
-.avatar{
-    width: 30px;
-    height: 30px;
-}
-// hide horizontal scrollbar
-::-webkit-scrollbar{
-    display:none
 }
