edited trips classes

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -75,7 +75,7 @@ img {
             }
         }
     }
-    &__trip-heading{
+    .title{
         text-align: center;
         font-weight: 600;
         margin-top: 30px;
