--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -10,7 +10,7 @@
       <li>
         <a href="/trips/<%= trip.slug %>">
           <img src="/images/<%= trip.image %>" />
-          <h3 class="trips__trip-heading"><%= trip.destination %></h3>
+          <h3 class="title"><%= trip.destination %></h3>
         </a>
       </li>
       <% } else { %>
