--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -117,7 +117,7 @@ img {
 .trips .trips-list li:last-child {
   padding-right: 50px;
 }
-.trips__trip-heading {
+.trips .title {
   text-align: center;
   font-weight: 600;
   margin-top: 30px;
