--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -1,7 +1,7 @@
 <%- include('head.ejs') %> <%- include('header.ejs') %>
 <div class="trips container">
   <!-- <div class="background-overlay"></div> -->
-  <section class="trips__heading">
+  <section class="trips__heading-container">
     <h1>trips</h1>
   </section>
   <div class="trips__container">
