--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -189,8 +189,30 @@ ul.trips-list li img {
   text-align: right;
 }
 
-.book-trip .image-container {
+.book-trip__image-container {
   height: 100px;
+}
+.book-trip form.booking-form .select-box {
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin: 0px 0px 15px 0px;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+.book-trip form.booking-form .select-box:hover {
+  background-color: #1B2739;
+  color: #ffffff;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+}
+.book-trip form.booking-form .select-box input[type=radio] {
+  display: none;
+}
+.book-trip form.booking-form .selected {
+  background-color: #1B2739;
+  color: #ffffff;
 }
 
 .book-btn {
