--- a/scss/index.scss
+++ b/scss/index.scss
@@ -154,8 +154,32 @@ ul.trips-list{
 
 // Book trip
 .book-trip{
-    .image-container{
+    &__image-container{
         height: 100px;
+    }
+    form.booking-form{
+        .select-box{
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin: 0px 0px 15px 0px;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s, box-shadow 0.3s;
+            &:hover{
+                background-color: $color-blue;
+                color: $color-white;
+                box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+            }
+            input[type="radio"]{
+                display: none;
+            }
+        }
+        .selected{
+            background-color: $color-blue;
+            color: $color-white;
+        }
     }
 }
 .book-btn{
