--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -2,7 +2,7 @@
 <div class="trips container">
   <!-- <div class="background-overlay"></div> -->
   <section class="trips__heading-container">
-    <h1>trips</h1>
+    <h1 class="slide-in-left">trips</h1>
   </section>
   <div class="trips__container">
     <ul class="trips-list">
