--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,3 +3,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Project Tech Bahaa Salaymeh</title>
 <link rel="stylesheet" href="/styles/index.css" />
+<script src="/js/script.js"></script>
