--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,10 @@
 <body>
   <div class="home container">
     <div class="home__intro-container">
-      <img class="logo" src="/images/logo.svg" alt="logo" />
-      <p class="tagline">making group travel cool!</p>
-      <h2 class="title">Adventure Awaits, Student Style!</h1>
-      <a class="btn" href="/trips">explore now</a>
+      <img class="logo slide-in-left" src="/images/logo.svg" alt="logo" />
+      <p class="tagline slide-in-left">making group travel cool!</p>
+      <h2 class="title slide-in-left">Adventure Awaits, Student Style!</h1>
+      <a class="btn slide-in-top" href="/trips">explore now</a>
     </div>
     <div class="home__trips-container">
       <ul class="trips-list">
