--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -134,6 +134,7 @@ ul.trips-list {
   padding: 0;
   margin: 0;
   color: #ffffff;
+  overflow-y: hidden;
 }
 ul.trips-list li {
   min-width: 250px;
