--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,4 @@
-<%- include('head.ejs') %>
-<body>
-  <div class="home container">
+<div class="home container">
     <div class="home__intro-container">
       <img class="logo slide-in-left" src="/images/logo.svg" alt="logo" />
       <p class="tagline slide-in-left">making group travel cool!</p>
@@ -10,7 +8,7 @@
     <div class="home__trips-container">
       <ul class="trips-list">
         <% for (let trip of trips) { %> <% if (trip.image) { %>
-        <li>
+        <li class="trip-item">
           <img src="/images/<%= trip.image %>" />
         </li>
         <% } else { %>
@@ -19,4 +17,3 @@
       </ul>
     </div>
   </div>
-</body>
