--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -1,4 +1,3 @@
-<%- include('head.ejs') %> <%- include('header.ejs') %>
 <div class="trips container">
   <!-- <div class="background-overlay"></div> -->
   <section class="trips__heading-container">
@@ -7,7 +6,7 @@
   <div class="trips__container">
     <ul class="trips-list">
       <% for (let trip of trips) { %> <% if (trip.image) { %>
-      <li>
+      <li class="trip-item">
         <a href="/trips/<%= trip.slug %>">
           <img src="/images/<%= trip.image %>" />
           <h3 class="title"><%= trip.destination %></h3>
