--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -1,3 +1,4 @@
+<%- include('partials/header.ejs') %>
 <div class="trips container">
   <!-- <div class="background-overlay"></div> -->
   <section class="trips__heading-container">
