edited background styling

--- a/views/book.ejs
+++ b/views/book.ejs
@@ -4,7 +4,7 @@
     class="trip__image-container book-trip__image-container"
     style="background-image: url('/images/<%= trip.image %>')"
   ></div>
-  <div class="trip__details-container">
+  <div class="trip__details-container book-trip__details-container">
     <div class="title-container">
       <section>
         <h1 class="title"><%= trip.destination %></h1>
