--- a/scss/index.scss
+++ b/scss/index.scss
@@ -120,17 +120,23 @@ ul.trips-list{
 
 // Single trip
 .trip{
-    margin-bottom: 200px;
     &__image-container{
+        position: absolute;
+        max-width: 425px;
         background-size: cover;
-        background-position: center;
-        height: 300px;
-        margin-bottom: -50px;
+        background-position: top;
+        min-height: 100vh;
+        width: 100%;
+        top: 0;
+        z-index: 1;
     }
     &__details-container{
-        padding: 35px 25px 0px 25px;
+        position: sticky;
+        padding: 30px 25px 30px 25px;
         border-top-left-radius: 40px;
+        z-index: 2;
         background: $color-white;
+        margin-top: 300px;
         .title-container{
             display: flex;
             justify-content: space-between;
@@ -158,6 +164,9 @@ ul.trips-list{
     &__image-container{
         height: 100px;
     }
+    &__details-container{
+        margin-top: 100px;
+    }
     form.booking-form{
         .select-box{
             display: inline-block;
@@ -184,10 +193,8 @@ ul.trips-list{
     }
 }
 .book-btn{
-    position: fixed;
-    bottom: 25px;
-    right: 25px;
     padding: 10px 50px;
+    max-width: 100px;
 }
 
 // Intersection observer animations
