--- a/scss/index.scss
+++ b/scss/index.scss
@@ -136,7 +136,7 @@ ul.trips-list{
         border-top-left-radius: 40px;
         z-index: 2;
         background: $color-white;
-        margin-top: 300px;
+        margin: 300px 20px 0px 20px;
         .title-container{
             display: flex;
             justify-content: space-between;
