--- a/views/trip_details.ejs
+++ b/views/trip_details.ejs
@@ -25,7 +25,9 @@
         <p><%= trip.duration %> days</p>
       </section>
     </div>
-    <a href="/trips/<%= trip.slug %>/book" class="btn book-btn">Book now</a>
+    <a href="/trips/<%= trip.slug %>/book" class="btn book-btn slide-in-top"
+      >Book now</a
+    >
   </div>
   <% } %>
 </div>
