added delete booking

--- a/views/book.ejs
+++ b/views/book.ejs
@@ -59,6 +59,8 @@
           <% } %>
         </section>
         <section>
+          <!-- edit personal info -->
+          <a href="/profile/edit" class="btn btn--secondary">edit</a>
           <h4>your personal info</h4>
           <input
             name="first_name"
