--- a/views/confirmed.ejs
+++ b/views/confirmed.ejs
@@ -1,27 +1,31 @@
-<div class="confirmed container">
-  <div>
-    <img />
-  </div>
-  <section>
+<div class="trip confirmed container">
+  <div
+    class="trip__image-container book-trip__image-container"
+    style="background-image: url('/images/<%= trip.image %>')"
+  ></div>
+  <div class="trip__details-container book-trip__details-container">
+    <div class="title-container">
+      <section>
+        <h1 class="title"><%= booking.destination %></h1>
+        <p class="duration"><%= trip.duration %> day tour</p>
+      </section>
+    </div>
     <% if (booking) { %>
-    <h2><%= booking.destination %></h2>
-
+    <section>
+      <h2>Congratulations <%= user.first_name %></h2>
+      <p>save the date:</p>
+      <p><%= booking.date_range %></p>
+      <p>We have sent you an email at <%= user.email %></p>
+      <p>Thank you for booking with us!</p>
+      <img />
+    </section>
     <% } %>
-
-    <p>Date</p>
-    <ul>
-      <!-- loop -->
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <!-- last item after loop -->
-      <li>54 +</li>
-    </ul>
-    <h2>Confirmed</h2>
-    <p>We have sent you an email at bahaa@hva.nl</p>
-    <p>Thank you for booking with us!</p>
-    <img />
-  </section>
+    <form
+      action="/trips/<%= trip.slug %>/book/confirmed/<%= booking._id %>/delete"
+      method="POST"
+    >
+      <button type="submit">Delete Booking</button>
+    </form>
+    <a href="/" class="btn btn--secondary">back to Home</a>
+  </div>
 </div>
