--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,1 +1,4 @@
-<h1>Welcome, <%= user %>!</h1>
+<div class="container">
+  <h1>Welcome, <%= user.first_name %>!</h1>
+  <a href="<%= referer %>">Go Back</a>
+</div>
