--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -111,11 +111,22 @@ img {
 .trips__heading-container {
   margin: 35px 25px 0px 25px;
 }
+.trips .trips-list {
+  padding-bottom: 200px;
+}
 .trips .trips-list li:first-child {
-  padding-left: 25px;
+  margin-left: 25px;
 }
 .trips .trips-list li:last-child {
-  padding-right: 50px;
+  margin-right: 50px;
+}
+.trips .trips-list li .trip-image-container {
+  height: 100%;
+}
+.trips .trips-list li .trip-title-container {
+  position: absolute;
+  bottom: -100px;
+  width: 100%;
 }
 .trips .title {
   text-align: center;
@@ -135,22 +146,38 @@ ul.trips-list {
   margin: 0;
   color: #ffffff;
   overflow-y: hidden;
+  min-height: 400px;
 }
 ul.trips-list li {
   min-width: 250px;
   flex: 0 0 auto;
-  padding: 0px 20px;
+  margin: 0px 20px 0px 0px;
   list-style-type: none;
   align-items: stretch;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  width: 300px;
+  min-height: 400px;
 }
 ul.trips-list li a {
+  position: absolute;
   display: block;
   width: 100%;
+  height: 100%;
+  top: 0;
 }
 ul.trips-list li:first-child {
   padding-left: 0px;
 }
 ul.trips-list li img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
   border-radius: 15px;
   border-top-right-radius: 190px;
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
