--- a/scss/index.scss
+++ b/scss/index.scss
@@ -66,12 +66,21 @@ img {
         margin: 35px 25px 0px 25px;
     }
     .trips-list{
+        padding-bottom: 200px;
         li{
             &:first-child{
-                padding-left: 25px;
+                margin-left: 25px;
             }
             &:last-child{
-                padding-right: 50px;
+                margin-right: 50px;
+            }
+            .trip-image-container{
+                height: 100%;
+            }
+            .trip-title-container{
+                position: absolute;
+                bottom: -100px;
+                width: 100%;
             }
         }
     }
@@ -95,27 +104,41 @@ ul.trips-list{
     margin: 0;
     color: $color-white;
     overflow-y: hidden;
+    min-height: 400px;
     li{
         min-width: 250px;
         flex: 0 0 auto;
-        padding: 0px 20px;
+        margin: 0px 20px 0px 0px;
         list-style-type: none;
         align-items: stretch;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        width: 300px;
+        min-height: 400px;
         a{
+            position: absolute;
             display: block;
             width: 100%;
+            height: 100%;
+            top: 0;
         }
         &:first-child{
             padding-left: 0px;
         }
         img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            min-width: 100%;
+            min-height: 100%;
+            object-fit: cover;
             border-radius: 15px;
             border-top-right-radius: 190px;
             box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
         }
-
-    }
-    
+    }   
 }
 
 // Single trip
