--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -112,6 +112,7 @@ img {
   margin: 35px 25px 0px 25px;
 }
 .trips .trips-list {
+  padding-top: 20px;
   padding-bottom: 200px;
 }
 .trips .trips-list li:first-child {
@@ -172,6 +173,7 @@ ul.trips-list li:first-child {
 }
 ul.trips-list li img {
   position: absolute;
+  height: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
